toolbar item align fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -39,14 +39,19 @@ body{
 	color: $accent-dark;
 }
 
+.toolbar {
+	align-items: center;
+}
+
 .icon-twitter:before, 
 .icon-twitter:before {
 	content: "\ea96";
   }
 
 #logo {
-	margin: 5px;
+	margin-left: 5px;
 	margin-right: 30%;
+	max-height: 40px;
 }
 
 #twitterButton {
